public/css/style.css
* {
  box-sizing: border-box;
}

/* 
####################
Utility selectors
####################
*/

.dark-blue {
  background-color: #131d27;
}

.light-blue {
  background-color: #cdedf1;
}

.h25 {
  height: 25px;
}

.h50 {
  height: 50px;
}

.h75 {
  height: 75px;
}

.h150 {
  height: 150px
}

.h100 {
  height: 100px
}

.bt12 {
  border-top: 12px solid #131d27;;
}

.flip {
  transform: rotate(180deg)
}


/* 
####################
Layout CSS 
####################
*/


body {
  background-color: #131d27;
  font-family: 'Montserrat', 'Muli', sans-serif;
  color: #bfbfbf;
}

header {
  font-family: 'Roboto', 'Muli', sans-serif;
  display: flex;
  flex-direction: column;
  position: fixed;
  justify-content: center;
  width: 220px;
  height: 100%;
  float: left;
  text-align: center;
  padding: 0 20px 50px 20px;
  top: 0;
}

#overlay {
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  z-index: 20;
  background-color: #131d27;
}

.top-nav {
  display: none;
}

.no-scroll {
  overflow: hidden;
}



.content {
  margin: auto;
  max-width: 1500px;
}

.main-section {
  margin-left: 220px;
  border-right: solid 12px #131d27;
}

footer.main-section {
  border-top: none;
}

.experience-section > article {
  border-bottom: dashed 3px #131d27;
  padding: 3rem;
}

#work-experience > article {
  border-bottom: solid 10px #131d27;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#work-experience > article > img {
  max-width: 50vw;
  margin: 3em;
}

#work-experience > article .text-col, #about-me .text-col {
  width: 45vw;
}

.col-wrap {
  width: 100%;
  display: flex;
  justify-content: center;
}


.experience-section > article:last-child, #work-experience > article:last-child {
  border-bottom: none;
}

.experience-section > article > img {
  width: 100%;
  max-width: 500px;
  height: auto;
  box-shadow: 0px 0px 14px -2px rgba(0, 0, 0, 0.51);
}

article > img {
  display: block;
  margin: 0 auto;
}

article > h1 {
  display: inline-block;
}

article, section {
  background-color: #cdedf1;
  color: #131d27;
}

footer {
  padding: 25px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/* 
####################
SVG Divders
####################
*/

.wave-divider {
  background-color: #131d27;
  position: relative;
}

.wave-bottom {
  bottom: 0;
}

.wave-bottom .shape-fill {
  fill: #131d27;
}

.wave-bottom svg {
  width: calc(100% + 1.3px);
}

.wave-top {
  background-color: #131d27;
  top: 0;
}

.wave-top svg {
  width: calc(100% + 1.3px);
}

.wave-top .shape-fill {
  fill: #cdedf1;
}

.wave {
  position: absolute;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
}

.wave svg {
  position: relative;
  display: block;
}


/* 
####################
Articles
####################
*/

.ooma-red, #ooma {
  background-color: #cf3339;
}

.cr-gray, #course-report {
  background-color: #444;
}

.eci-green, #exclusive-concepts {
  background-color: #0E8144;
}

#work-experience > article {
  color: white;
}

.experience-section {
  line-height: 1.5;
}

.project-blurb {
  font-size: 35px;
  padding: 20px;
  margin: 0;
}

.project-summary {
  font-size: 16px;
  text-transform: uppercase;
  padding: 20px;
  letter-spacing: 3px;
  font-weight: 800;
}

.project-title,
.project-title a {
  margin: 0;
  text-decoration: none;
  font-size: 50px;
  font-weight: 700;
  padding: 20px
}

.project-description {
  margin: 0;
  padding: 20px;
}

.project-description,
#about-me p {
  overflow-wrap:break-word;
  font-size: 20px;
  line-height: 1.5;
}

.project-links {
  float: right;
}

.project-links a {
  line-height: 2em;
  margin-left: 1em;
  text-align: center;
  vertical-align: middle;
  border-radius: 100%;
  width: 2em;
  height: 2em;
  background-color: #4285f4;
  float: right;
  font-size: 20px;
  color: white;
}

.imgs-container {
  margin: 3em;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.imgs-container > img {
  max-height: 361px;
  max-width: 300px;
  width: 100%;
  height: auto;
}

/* 
####################
Sidenav CSS 
####################
*/

header h1 {
  color: white;
  font-size: 2.3em;
  margin-top: 0;
  margin-bottom: 0;
  letter-spacing: 3px;
}

#name-highlight {
  color:#4285f4;
}

.nav-link {
  font-size: 1.4em;
  color: #bfbfbf;
}

.nav-link.active {
  font-weight: bold;
  color: white;
}

header a {
  text-decoration: none;
}

li > a.active {
  color: white;
}

li > a.active:hover {
  font-weight: bold;
  color: white;
}

a {
  color: #bfbfbf;
}

li > a {
  color: #bfbfbf;
}

header a:hover {
  text-decoration: none;
  color: white;
  font-weight: bold;
}

header > div > a {
  margin-right: 20px;
}

.contact-info {
  font-size: 1em;
}

.contact-info a {
  color: #bfbfbf;
  text-decoration: none;
}

#navigation {
  margin: 20px;
  text-align: left;
}

#navigation ul {
  list-style: none;
  padding-left: 0;
}

#navigation li {
  padding-left: 1em;
  white-space: nowrap;
}

.contact-info div {
  margin: 10px;
}

.contact-info a:nth-child(even) {
  margin-left: 50px;
}

.contact-info i {
  color: #bfbfbf;
  font-size: 0.85em;
}

#snake-iframe {
  margin: 0 auto;
  display: block;
  background-color: white;
  border: none;  
  min-width: 350px;
  min-height: 350px;
  box-shadow: 0px 0px 14px -2px rgba(0, 0, 0, 0.51);
}

#burger-img-container {
  text-align: right;
}

#burger-img {
  width: 75%;
}

/* 
####################
Loader CSS 
####################
*/

.loader,
.loader:before,
.loader:after {
  border-radius: 50%;
  width: 2.5em;
  height: 2.5em;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation: load7 1.8s infinite ease-in-out;
  animation: load7 1.8s infinite ease-in-out;
}
.loader {
  color: #ffffff;
  position: absolute;
  top: 35%;
  left: 50%;
  text-indent: -9999em;
  -webkit-transform: translateZ(0) translate(-50%, -50%);
  -ms-transform: translateZ(0) translate(-50%, -50%);
  transform: translateZ(0) translate(-50%, -50%);
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}
.loader:before,
.loader:after {
  content: '';
  position: absolute;
  top: 0;
}
.loader:before {
  left: -3.5em;
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}
.loader:after {
  left: 3.5em;
}
@-webkit-keyframes load7 {
  0%,
  80%,
  100% {
    box-shadow: 0 2.5em 0 -1.3em;
  }
  40% {
    box-shadow: 0 2.5em 0 0;
  }
}
@keyframes load7 {
  0%,
  80%,
  100% {
    box-shadow: 0 2.5em 0 -1.3em;
  }
  40% {
    box-shadow: 0 2.5em 0 0;
  }
}

/* 
####################
About Me CSS 
####################
*/

#about-me,
#contact-me {
  text-align: left;
  color: black;
  padding: 50px;
  display: flex;
  flex-direction: column;
}

#about-me {
  justify-content: flex-start;
}

#contact-me img {
  border-radius: 50%;
  width: 100%;
  max-width: 200px;
  height: auto;
  border: solid 5px #4285f4;
  margin-bottom: 1.75em;
}

#about-me p,
#contact-me p {
  font-size: 1.2em;
}

#about-me #intro-text {
  font-weight: bold;
  font-size: 2.5em;
  margin-bottom: 1rem;
  color: #4285f4;
  margin-top: 7px;
  display: inline-block;
  width: 60%;
}

#cr-link > img {
  max-height: 6rem;
  height: 6rem;
  width: 6rem;
}

.company-logo-links a img {
  max-height: 4rem;
  width: 4rem;
}

.company-logo-links > p {
  text-align: center;
}

.company-logo-links > div {
  display: flex;
  justify-content: space-evenly;
}

.company-logo-links a {
  height: 6rem;
  width: 6rem;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center; 
}

/* 
####################
Contact Me CSS 
####################
*/

#contact-me {
  justify-content: flex-start;
  line-height: 25px;
}

.contact-img-wrapper {
  display: flex;
  justify-content: center;
}

blockquote {
  font-size: 1.5em;
  font-weight: bolder;
  margin-left: 1rem;
  margin-right: 0;
}

#contact-me blockquote a {
  color: #4285f4;
}

/* 
####################
Mobile CSS 
####################
*/
@media only screen and (max-width: 1015px) {
  .imgs-container > img:nth-child(1) {
    display: none;
  }
  #about-me #intro-text {
    width: 48%;
  }
}

@media only screen and (max-width: 875px) {
  #about-me .project-links {
    display: none;
  }
  #about-me #intro-text {
    width: 100%;
  }
  header {
    width: 200px;
  }
  .main-section {
    margin-left: 200px;
  }
  #navigation li {
    display: none;
  }
}

@media only screen and (max-width: 650px) {
  header {
    display: none;
  }

  .experience-section > article {
    padding: 3rem 0 3rem 0;
  }

  #about-me .project-links a {
    margin: 0;
  }

  #about-me #intro-text {
    margin-top: 1rem;
  }

  #burger-img {
    width: 30%;
  }

  header > h1 {
    margin-top: 20px;
  }

  header > div > a {
    display: none;
  }

  #navigation {
    display: none;
  }

  .content {
    padding-top: 0;
  }

  #about-me {
    padding: 50px 15px 50px 15px;
    border-top: none;
  }

  .main-section {
    margin: 0;
    padding-left: 15px;
    padding-right: 15px;
    border-right: 0;
  }

  #contact-me {
    padding: 15px;
  }

  .experience-section > article,
  #about-me,
  #contact-me {
    height: auto;
  }

  .top-nav {
    position: fixed;
    display: flex;
    width: 100%;
    justify-content: space-around;
    z-index: 10;
  }

  .mobile-nav-link {
    line-height: 22px;
    text-decoration: none;
    height: 22px;
    width: 50%;
    text-align: center;
    color: white;
    background-color: gray;
  }

  .mobile-nav-link.active {
    background-color: #4285f4;
  }

  .top-nav a:nth-child(2) {
    border-right: solid 3px #131d27;
    border-left: solid 3px #131d27;
  }

  .top-nav a:nth-child(3) {
    border-right: solid 3px #131d27;
  }
}

@media only screen and (max-width: 380px) {
  #snake-iframe {
    display: none;
  }
}

